8035841: assert(dp_src->tag() == dp_dst->tag()) failed: should be same tags 1 != 0 at ciMethodData.cpp:90

Concurrent update of traps with construction of ciMethodData

Reviewed-by: kvn, twisti